Fix sidebar on mobile

--- a/assets/leaflet-sidebar/css/leaflet-sidebar.css
+++ b/assets/leaflet-sidebar/css/leaflet-sidebar.css
@@ -1,6 +1,6 @@
 .sidebar {
   position: absolute;
-  top: 0;
+  top: 50px;
   bottom: 0;
   width: 100%;
   overflow: hidden;
@@ -33,6 +33,12 @@
   @media (min-width: 768px) {
     .sidebar-right {
       right: 10px; } }
+
+@media (max-width: 768px){
+  .leaflet-control-zoom{
+    display: none;
+  }
+}
 
 .sidebar-tabs {
   top: 0;
@@ -136,16 +142,13 @@
     left: 0; }
 
 .sidebar-left ~ .sidebar-map {
-  margin-left: 40px; }
-  @media (min-width: 768px) {
-    .sidebar-left ~ .sidebar-map {
-      margin-left: 0; } }
+  margin-left: 0;
+}
+
 
 .sidebar-right ~ .sidebar-map {
-  margin-right: 40px; }
-  @media (min-width: 768px) {
-    .sidebar-right ~ .sidebar-map {
-      margin-right: 0; } }
+  margin-right: 0;
+}
 
 .sidebar {
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.65); }
